--- a/client/index.html
+++ b/client/index.html
@@ -33,11 +33,11 @@
 		<li><a>Logging in...</a></li>
 	{{else}}
 		<li>
-			<img class="img-rounded" style="height: 32px; margin-top: 4px;" src="{{currentUser.profile.avatar_url}}" />
+			<img class="img-rounded" style="height: 32px; margin-top: 4px;" src="{{currentUser.profile.picture}}" />
 		</li>
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				{{currentUser.profile.name}}
+				{{> user_name}}
 				<b class="caret"></b>
 			</a>
 			<ul class="dropdown-menu">
@@ -50,6 +50,10 @@
 </template>
 
 <template name="user_loggedout">
-	<li><a id="login">Login with Github</a></li>
+	<li><a id="login">Login with Facebook</a></li>
+</template>
+
+<template name="user_name">
+	{{currentUser.services.facebook.name}}
 </template>
 
