--- a/client/index.html
+++ b/client/index.html
@@ -41,7 +41,7 @@
 				<b class="caret"></b>
 			</a>
 			<ul class="dropdown-menu">
-				<li><a>Account Settings</a></li>
+				<li><a id="accountSettings">Account Settings</a></li>
 				<li class="divider"></li>
 				<li><a id="logout">Logout</a></li>
 			</ul>
